--- a/software.html
+++ b/software.html
@@ -44,15 +44,15 @@
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/juullabs/jobs/1788957'>Job Application for Senior Mobile SDET (Software Developer In Test) at JUUL Labs</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/juullabs/jobs/1789138'>Job Application for Software Engineer ? Computational Fluid Dynamics at JUUL Labs</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=no59WLwO'>Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/nice-actimize-old/job/o6mbafwx'>NICE Actimize Careers - Software Engineer</a></h5> 
@@ -60,11 +60,11 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692385815-software-engineer'>Spry Squared, Inc. Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/spireon/job/oKwEafwO'>Spireon Careers - Sr. Software Engineer in Test</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999692355513-sr-software-engineer-data'>Traveloka Sr. Software Engineer - Data | SmartRecruiters</a></h5> 
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://aluperf.referrals.selectminds.com/jobs/co-op-software-engineer-devops-33201'>Co-op Software Engineer - DevOps - Nokia Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/co-op-software-engineer-devops-33201'>Co-op Software Engineer - DevOps - Nokia Careers</a></h5> 
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -179,7 +179,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiC29fwP&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nuaYVLwN'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiC29fwP&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nuaYVLwN'>ServiceNow Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -191,7 +191,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/logdna/jobs/4374202002'>Job Application for Software Engineering Manager at LogDNA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logdna/jobs/4374202002'>Job Application for Software Engineering Manager at LogDNA</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -303,7 +303,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/0PxjLpCn4L/Modeling-Software-Engineer-9382823'>Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/0PxjLpCn4L/Modeling-Software-Engineer-9382823'>Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -323,11 +323,11 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1785796'>Job Application for Software Engineer - API Management  at Fitbit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1785796'>Job Application for Software Engineer - API Management  at Fitbit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -360,7 +360,7 @@ Generation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Ruby Software Engineer at Farmdrop.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
+<h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Engineer (Full Stack) at RateSetter.</p>
 <hr/>
@@ -418,7 +418,7 @@ operational feedback and diagnostics functionality. Help bring up new systems,?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -442,7 +442,7 @@ design, providing users with a platform to make beautiful designs for any projec
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
 SmartNews, Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
